--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,27 @@
 /* Global Styles */
+.particles {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #254f86;
+}
+.fill {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 :root {
   --primary-color: #afbcc9ea;
   --dark-color: #254f86;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
   --success-color: #28a745;
+  background-color: #254f86;
 }
 
 * {
@@ -14,7 +31,7 @@
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Century Gothic", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #fff;
@@ -40,8 +57,10 @@ img {
   margin: auto;
   overflow: hidden;
   padding: 0 2rem;
-  margin-top: 6rem;
-  margin-bottom: 3rem;
+  margin-top: 4.5rem;
+  margin-bottom: 0rem;
+  background-color: whitesmoke;
+  border-radius: 1cm;
 }
 
 /* Text Styles*/
@@ -245,10 +264,10 @@ img {
   color: #888;
 }
 
-.form input[type='text'],
-.form input[type='email'],
-.form input[type='password'],
-.form input[type='date'],
+.form input[type="text"],
+.form input[type="email"],
+.form input[type="password"],
+.form input[type="date"],
 .form select,
 .form textarea {
   display: block;
@@ -258,7 +277,7 @@ img {
   border: 1px solid #ccc;
 }
 
-.form input[type='submit'],
+.form input[type="submit"],
 button {
   font: inherit;
 }
@@ -333,7 +352,6 @@ button {
 /* Landing Page */
 .landing {
   position: relative;
-  background: url('./img/showcase.jpg') no-repeat center center/cover;
   height: 100vh;
 }
 
@@ -364,10 +382,10 @@ button {
 .profile-grid {
   display: grid;
   grid-template-areas:
-    'top top'
-    'about about'
-    'exp edu'
-    'github github';
+    "top top"
+    "about about"
+    "exp edu"
+    "github github";
   grid-gap: 1rem;
 }
 
@@ -550,11 +568,11 @@ button {
 
   .profile-grid {
     grid-template-areas:
-      'top'
-      'about'
-      'exp'
-      'edu'
-      'github';
+      "top"
+      "about"
+      "exp"
+      "edu"
+      "github";
   }
 
   .profile-about .skills {
